--- a/contact2.html
+++ b/contact2.html
@@ -11,11 +11,9 @@
         <div class="logo">NOVATECH ELECTRONICS</div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#" class="contact-btn">Contact Us</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact2.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
