--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
     <section>
         <h2>Welcome to NovaTech Electronics</h2>
         <p>We provide high-quality electronic components and automation solutions.</p>
-        <img src="C:\Users\user\Downloads\novatech banner.jpg" alt="NovaTech Electronics Banner" width="600">
+        <img src="C:\Users\user\Downloads\banner2.jpg" alt="NovaTech Electronics Banner" width="400">
     </section>
 
     <section>
@@ -42,6 +42,14 @@
                 <h3>Power Supplies</h3>
                 <img src="C:\Users\user\Downloads\power suppy.jpg" alt="Power Supplies" width="300">
             </li>
+            <li>
+                <h3>Multi tandem Water cooler</h3>
+                <img src="C:\Users\user\Downloads\multi tandem.jpg" alt="Multi tandem Water cooler" width="300">
+                </li>
+                <li>
+                    <h3>smart technologies</h3>
+                    <img src="C:\Users\user\Downloads\technologies.jpg" alt="novatech technologies" width="300">
+                    </li>
         </ul>
     </section>
 
