--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     href="style.css">
 </head>
 <body>
-    <header>``
+    <header>
         <h1>About Us</h1>
     </header>
     <section class="about">
