--- a/home.html
+++ b/home.html
@@ -63,10 +63,12 @@
             <li>Fast and secure shipping</li>
         </ul>
     </section>
-
+    <button onclick="changeBackground()">Change Background</button>
     <footer>
         <p>&copy; 2025 NovaTech Electronics. All rights reserved.</p>
     </footer>
+    <script src="scripts2.js"></script>
+
 
 </body>
 </html>
