--- a/home.html
+++ b/home.html
@@ -20,56 +20,123 @@
             <li><a href="contact2.html">Contact Us</a></li>
         </ul>
     </nav>
-
+    <div class="slider-container">
+        <div class="slider">
+            <section class="slide">
     <section>
         <h2>Welcome to NovaTech Electronics</h2>
         <p>We provide high-quality electronic components and automation solutions.</p>
-        <img src="C:\Users\user\Downloads\banner2.jpg" alt="NovaTech Electronics Banner" width="400">
+        <img src= "C:\Users\user\Downloads\banner2.jpg"alt="banner" width="400">
     </section>
-
-    <section>
+        <section class="slide">
         <h2>Our Products</h2>
-        <ul>
-            <li>
+        <section class="categories">
+            <h3>Shop by Category</h3>
+            <div class="category-list">
+                <button class="category-item">Smart Gadget</button>
+                <button class="category-item">Boards</button>
+                <button class="category-item">Accessories</button>
+            </div>
+        </section>
+        <div class="product-row">
+            <div class="product-item">
                 <h3>Arduino Boards</h3>
                 <img src="C:\Users\user\Downloads\board.jpg" alt="Arduino Board" width="300">
-            </li>
-            <li>
-                <h3>Sensors & Modules</h3>
-                <img src="C:\Users\user\Downloads\modules.jpg" alt="Sensors & Modules" width="300">
-            </li>
-            <li>
-                <h3>Power Supplies</h3>
-                <img src="C:\Users\user\Downloads\power suppy.jpg" alt="Power Supplies" width="300">
-            </li>
-            <li>
-                <h3>Multi tandem Water cooler</h3>
-                <img src="C:\Users\user\Downloads\multi tandem.jpg" alt="Multi tandem Water cooler" width="300">
-                </li>
-                <li>
-                    <h3>smart technologies</h3>
-                    <img src="C:\Users\user\Downloads\technologies.jpg" alt="novatech technologies" width="300">
-                    </li>
-        </ul>
+                <p class="price">$45 <span class="star-rating">★★★★</span></p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="product-item">
+                <h3>IPhone</h3>
+                <img src="C:\Users\user\Downloads\iphone.webp" alt="phone" width="300">
+                <p class="price">$25 <span class="star-rating">★★★★</span></p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="product-item">
+                <h3>HP Laptop</h3>
+                <img src="C:/Users/user/Downloads/hp.webp" alt="hp laptop" alt="HP laptop" width="300">
+                <p class="price">$550 <span class="star-rating">★★★★</span></p>
+                <button>Add to Cart</button>
+            </div>
+        </div>
     </section>
-
-    <section>
-        <h2>Why Choose Us?</h2>
-        <p>At NovaTech Electronics, we offer:</p>
-        <ul>
-            <li>Quality-tested components</li>
-            <li>Reliable automation solutions</li>
-            <li>Expert technical support</li>
-            <li>Fast and secure shipping</li>
-        </ul>
+    <section class="slide">
+        <section class="offer-section">
+            <h2>Special Offers</h2>
+            <div class="offer-row">
+                <div class="offer-item">
+                    <img src="C:\Users\user\Downloads\board.jpg" alt="Arduino board">
+                    <h3>Arduino boards</h3>
+                    <p class="price">$42Price <span class="star-rating">★★★★</span></p>
+                    <p class="description">HOT DEAL!! new collection on offer.</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="offer-item">
+                    <img src="C:\Users\user\Downloads\multi tandem.jpg" alt="Water cooler">
+                    <h3>tandem water</h3>
+                    <p class="price">$146Price <span class="star-rating">★★★★</span></p>
+                    <p class="description">HOT DEAL!! newcollection on offer.</p>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+        </section>
+        </section>
+        <section class="slide">
+        <div class="product-row">
+            <div class="product-item">
+                <h3>Multi-tandem Water Cooler</h3>
+                <img src="C:\Users\user\Downloads\multi tandem.jpg" alt="Water Cooler" width="300">
+                <p class="price">$150 <span class="star-rating">★★★★</span></p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="product-item">
+                <h3>Accessories</h3>
+                <img src="C:/Users/user/Downloads/airpods.webp" alt="Accessories" width="300">
+                <p class="price">$200 <span class="star-rating">★★★★</span></p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="product-item">
+                <h3>Bluetti </h3>
+                <img src="C:/Users/user/Downloads/bluetti.webp" alt="bluetti" width="300">
+                <p class="price">$200 <span class="star-rating">★★★★</span></p>
+                <button>Add to Cart</button>
+            </div>
+        </div>
     </section>
-    <button onclick="changeBackground()">Change Background</button>
+            <h2>Why Choose Us?</h2>
+            <p>At NovaTech Electronics, we offer:</p>
+            <ul>
+                <li>Quality-tested components</li>
+                <li>Reliable automation solutions</li>
+                <li>Expert technical support</li>
+                <li>Fast and secure shipping</li>
+            </ul>
+             <section class="top-selling">
+            <h2>Top Selling Products</h2>
+            <div class="product-list">
+                <div class="product-item">
+                    <img src="C:\Users\user\Downloads\multi tandem.jpg" alt="water cooler">
+                    <p class="price">$Price</p>
+                    <p class="description">product name goes here<br>$150 from $180</p>
+                </div>
+                <div class="product-item">
+                    <img src="C:/Users/user/Downloads/bluetti.webp" alt="bluetti">
+                    <p class="price">$Price</p>
+                    <p class="description">product name goes here<br>$200 from $350.</p>
+                </div>
+                <div class ="product-grid">
+                <div class="product-item">
+                    <img src="C:/Users/user/Downloads/airpods.webp" alt="Accessories">
+                    <p class="price">$Price</p>
+                    <p class="description">product name goes here<br>$200 from $350.</p>
+                </div>
+            </div>
+        </div>
+        </section>   
+        <button onclick="changeBackground()">Change Background</button>
     <footer>
         <p>&copy; 2025 NovaTech Electronics. All rights reserved.</p>
     </footer>
     <script src="scripts2.js"></script>
-
-
 </body>
 </html>
         
