--- a/about.html
+++ b/about.html
@@ -8,8 +8,9 @@
     href="style.css">
 </head>
 <body>
+<div class="container"> 
     <header>
-        <h1>About Us</h1>
+        <h1>WELCOME TO NOVATECH  ELECTRONICS </h1>
     </header>
     <section class="about">
         <h2>Who We Are</h2>
