--- a/home.html
+++ b/home.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-
     <header>
         <h1>NOVATECH ELECTRONICS</h1>
         <p>Innovation in Electronics and Automation</p>
@@ -20,15 +19,11 @@
             <li><a href="contact2.html">Contact Us</a></li>
         </ul>
     </nav>
-    <div class="slider-container">
-        <div class="slider">
-            <section class="slide">
     <section>
         <h2>Welcome to NovaTech Electronics</h2>
         <p>We provide high-quality electronic components and automation solutions.</p>
         <img src= "C:\Users\user\Downloads\banner2.jpg"alt="banner" width="400">
     </section>
-        <section class="slide">
         <h2>Our Products</h2>
         <section class="categories">
             <h3>Shop by Category</h3>
@@ -59,7 +54,6 @@
             </div>
         </div>
     </section>
-    <section class="slide">
         <section class="offer-section">
             <h2>Special Offers</h2>
             <div class="offer-row">
@@ -131,11 +125,30 @@
                 </div>
             </div>
         </div>
-        </section>   
+        </section>
+        <nav>
+            <ul>
+                <a href="https://www.facebook.com/YourPageName" target="_blank">
+                    <img src="C:\Users\user\OneDrive\Desktop\fblogo.png" width="40" alt="Facebook">
+                </a>
+                
+                <a href="https://twitter.com/YourTwitterHandle" target="_blank">
+                    <img src="C:\Users\user\OneDrive\Desktop\twitterlogo.jpeg" width="40" alt="Twitter">
+                </a>
+                
+                <a href="https://www.instagram.com/YourInstagramHandle" target="_blank">
+                    <img src="C:\Users\user\OneDrive\Desktop\instagramlogo.jpeg" width="40" alt="Instagram">
+                </a>
+            </ul>
+        </nav>   
         <button onclick="changeBackground()">Change Background</button>
     <footer>
         <p>&copy; 2025 NovaTech Electronics. All rights reserved.</p>
     </footer>
+    <form action="https://your-email-service.com/subscribe" method="post">
+        <input type="email" name="email" placeholder="Enter your email" required>
+        <button type="submit">Subscribe</button>
+    </form>
     <script src="scripts2.js"></script>
 </body>
 </html>
