--- a/about.html
+++ b/about.html
@@ -8,10 +8,20 @@
     href="style.css">
 </head>
 <body>
+<div class="logo">
+<a href="about .html"><img src="C:\Users\Lenovo\Pictures\my logo.png"width="125px"></a>
+</div>
 <div class="container"> 
     <header>
         <h1>WELCOME TO NOVATECH  ELECTRONICS </h1>
     </header>
+    <nav>
+    <ul>
+      <li><a href="home.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="contact2.html">Contact Us</a></li>
+      </ul>
+      </nav>
     <section class="about">
         <h2>Who We Are</h2>
         <p>Welcome to Novatech Electronis,is an online store that sell engineeringnelectronics component.</p>
@@ -38,6 +48,7 @@
     </section>
     <footer>
         <p>Contacts us:<a href="Tel:2547115445750">25471 15445750</a></p>
+        <button type="submit">subscribe</button>
     </footer>   
 </body>
 </html>
