--- a/home.html
+++ b/home.html
@@ -7,18 +7,7 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <header>
-        <h1>NOVATECH ELECTRONICS</h1>
-        <p>Innovation in Electronics and Automation</p>
-    </header>
-
-    <nav>
-        <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="contact2.html">Contact Us</a></li>
-        </ul>
-    </nav>
+   
     <section>
         <h2>Welcome to NovaTech Electronics</h2>
         <p>We provide high-quality electronic components and automation solutions.</p>
@@ -125,6 +114,15 @@
                 </div>
             </div>
         </div>
+        <div class="slider-container">
+            <div class="slider">
+                <div class="slide"><img src="C:/Users/user/Downloads/airpods.webp" alt="Accessories"></div>
+                <div class="slide"><img src="C:/Users/user/Downloads/bluetti.webp" alt="bluetti"></div>
+                <div class="slide"><img src="C:\Users\user\Downloads\multi tandem.jpg" alt="Water Cooler"></div>
+                <div class="slide"><img src="C:\Users\user\Downloads\board.jpg" alt="Arduino board"></div>
+            </div>
+        </div>
+    
         </section>
         <nav>
             <ul>
@@ -149,6 +147,7 @@
         <input type="email" name="email" placeholder="Enter your email" required>
         <button type="submit">Subscribe</button>
     </form>
+
     <script src="scripts2.js"></script>
 </body>
 </html>
