--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="logo">
-<a href="about .html"><img src="C:\Users\Lenovo\Pictures\my logo.png"width="125px"></a>
+<a href="about .html"><img src=""width="125px"></a>
 </div>
 <div class="container"> 
     <header>
