--- a/contact2.html
+++ b/contact2.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewpor-width, initial-scale=1.0">
     <title>Coloshop</title>
     <link rel="stylesheet" href="stylesg.css">
 </head>
