--- a/about.html
+++ b/about.html
@@ -3,52 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WELCOME TO NOVATECH ELECTRONCS</title>
-    <link rel="stylesheet"
-    href="style.css">
+    <title>WELCOME TO NOVATECH ELECTRONICS</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="logo">
-<a href="about .html"><img src=""width="125px"></a>
+<a href="about.html"><img src="/image/my logo.png" width="125px"></a>
 </div>
 <div class="container"> 
     <header>
-        <h1>WELCOME TO NOVATECH  ELECTRONICS </h1>
+        <h>WELCOME TO NOVATECH ELECTRONICS</h1>
     </header>
     <nav>
     <ul>
       <li><a href="home.html">Home</a></li>
       <li><a href="about.html">About Us</a></li>
       <li><a href="contact2.html">Contact Us</a></li>
-      </ul>
-      </nav>
+    </ul>
+    </nav>
     <section class="about">
         <h2>Who We Are</h2>
-        <p>Welcome to Novatech Electronis,is an online store that sell engineeringnelectronics component.</p>
-        <p>We are dedicated to home and industrial automation</p>
+        <p>Welcome to Novatech Electronics, an online store that sells engineering electronics components.</p>
+        <p>We are dedicated to home and industrial automation.</p>
     </section>
-    <section class="mission vision" >
-       <h2 >Our Vision</h2>   
-         <p>To be the leading online electronic store,delivering innovation and technology to every home and business.</p>
+    <section class="mission vision">
+       <h2>Our Vision</h2>   
+         <p>To be the leading online electronic store, delivering innovation and technology to every home and business.</p>
     </section>
     <section class="values">
         <h2>Core Values</h2>
         <ul>
-           <li><strong >Customer Satisfaction:</strong>we put our customers first.</li>
-            <li><strong>Innovation:</strong>we bring the latest technology to you.</li>
-            <li><strong>Integrity:</strong>we believe in honesty and transparency.</li>
-            <li><strong>Quality:</strong>only the best products make it to our store.</li>
+           <li><strong>Customer Satisfaction:</strong> we put our customers first.</li>
+            <li><strong>Innovation:</strong> we bring the latest technology to you.</li>
+            <li><strong>Integrity:</strong> we believe in honesty and transparency.</li>
+            <li><strong>Quality:</strong> only the best products make it to our store.</li>
         </ul>
     </section>
     <section class="location-hours">
         <h2>Our Location</h2>
-        <p><strong>munyu business center,second floor c7:</strong>Nairobi</p>
-        <p><strong>Opening Hours:</strong>Monday-saturday:9 AM -8 PM</p>
-        <p><strong>Sunday:</strong>Closed</p>    
+        <p><strong>Munyu Business Center, second floor c7:</strong> Nairobi</p>
+        <p><strong>Opening Hours:</strong> Monday-Saturday: 9 AM - 8 PM</p>
+        <p><strong>Sunday:</strong> Closed</p>    
     </section>
     <footer>
-        <p>Contacts us:<a href="Tel:2547115445750">25471 15445750</a></p>
-        <button type="submit">subscribe</button>
+        <p>Contact us: <a href="tel:2547115445750">25471 15445750</a></p>
+        <button type="submit">Subscribe</button>
     </footer>   
 </body>
 </html>
