--- a/about2.html
+++ b/about2.html
@@ -4,17 +4,146 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="stylef.css">
 </head>
 <body>
-    <div class="hero">
-        <div class="content">
-            <img src="images/logo.png" alt="">
-            <h1>About Us</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis cupiditate deserunt
-                placeat necessitatibus a aliquam corrupti nisi odio aliquid, accusamus.</p>
+    <div class="about-container">
+        <div class="hero">
+            <div class="content">
+                <img src="images/logo.png" alt="">
+                <img src="images/image1.jpeg" alt="">
+                <img src="images/wallpaper.jpeg" alt="">
+                <h1>About Us</h1>
+                <p>Welcome to Novatech electronics ,its an online store whereby we deal with first moving goods.</p>
+                <p>We deliver goods across country,we are really dedicated to home and industrial automation.</p>
+            </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <section class="container">
+        <div class="images">
+            <img src="images/image11.jpeg">
+            <img src="images/image2.jpeg" alt="Smiling woman holding books">
+            <img src="images/image4.jpeg" alt="Lawyer in an office">
+        </div>
+        <div class="content">
+            <h2>We Provide Highly <strong>Reliable & Effective</strong> Latest technology</h2>
+            <p>Our zeal it's to meet our customers satisfaction and ensuring they get goods of high quality.</p>
+            <button id="appointment-btn">Book an appointment</button>
+        </div>
+    </section>
+    <section class="team-container">
+        <div class="team-member">
+            <img src="images/person7.jpg" alt="Profile">
+            <h3>Jane sasha</h3>
+            <p class="role">Founder</p>
+            <p>Jane being a leader in our company she came up with the ideas of diodes and our they work.</p>
+            <p>She is highly recognized in the company you can consult her for more information concerning the diodes.</p>
+        </div>
+        <div class="team-member">
+            <img src="images/person2.jpg" alt="Profile">
+            <h3>milka sojin</h3>
+            <p class="role">Founder</p>
+            <p>She came up with the idea of inveting transistors in our company which has brought a great change in our company</p>
+            <p>She is free to all customers for more consultation about transistors.</p>
+        </div>
+        <div class="team-member">
+            <img src="images/person10.jpg" alt="Profile">
+            <h3>Janelle becky</h3>
+            <p class="role">Founder</p>
+            <p>She displays a major role in motor departement.</p>
+            <p>she has a great idea in servo motor and sg90 motors which are highly recommendable.</p>
+        </div>
+        <div class="team-member">
+            <img src="images/person4.jpg" alt="Profile">
+            <h3>David mallis</h3>
+            <p class="role">Founder</p>
+            <p>This one of our supportive sponsor who inveted arduino mega and uno.</p>
+            <p>We have gained more knowledge concerning the latest model of arduino uno through him.</p>
+            <p>You can also contact him for more details concerning the product.</p>
+        </div>
+        <div class="team-member">
+            <img src="images/person12.PNG" alt="profile">" 
+            <h3>Carolina sussana</h3>
+            <p class="role">Founder</p>
+            <p>She is smart and has a great knowledge on light emmiting diodes.</p>
+            <p>She has done some project whereby she developed first practical of visible spectrum using led.</p>
+        </div>
+        <div class="team-member">
+            <img src="images/person9.jpg" alt="Profile">
+            <h3>Andrew ure</h3>
+            <p class="role">Founder</p>
+            <p>He is one of best role model and expert in our industry.</p>
+            <p>he has a high knowledge concerning thermostista which is used to maintain constant temperature.</p>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="overlay"></div>
+        <div class="footer-content">
+            <div class="footer-section about">
+                <h2>About Us</h2>
+                <p>We are located in Nairobi,</p>
+                <p>Munyu business center ,along munyu road.</p>
+                <p>Second floor,room C8.</p>
+                <div class="social-icons">
+                    <a href="#"><img src="images/image7.jpeg"></a>
+                    <a href="#"><img src="images/image8.jpeg"></a>
+                    <a href="#"><img src="images/image6.jpeg"></a> 
+                    <a href="#"><img src="images/image9.jpeg"></a>
+                </div>
+            </div>
+
+            <div class="footer-section">
+                <h2>Quick Links</h2>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h2>Resources</h2>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h2>Support</h2>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h2>Company</h2>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>Copyright ©2025 All rights reserved | This template is made with <span class="heart">❤</span> by Colorlib</p>
+        </div>
+    </footer>
+    <script src="script4.js"></script>
+    <script src="script4.js"></script>
+    <script src="script4.js"></script>
+    <script src="script4.js"></script>
 </body>
 </html>
